--- a/app/views/products/products/index.html.slim
+++ b/app/views/products/products/index.html.slim
@@ -8,14 +8,16 @@ h1 Zoznam produktov
       tr
         th ID
         th Meno produktu
+        th Varianty
         th
     tbody
       - @products.each do |product|
         tr
           th = product.id
-          td = product.title
+          td = link_to product.title, product_path(product)
+          td = product.variants.count
           td
             => link_to 'Upraviť', edit_product_path(product), class: 'btn btn-xs btn-default'
             = link_to 'Zmazať', product_path(product), method: :delete, data: { confirm: 'Ste si istý?' }, class: 'btn btn-xs btn-danger'
 
-  = link_to 'Pridať nový produkt', new_product_path, class: 'btn btn-default'
+= link_to 'Pridať nový produkt', new_product_path, class: 'btn btn-default'
