--- a/app/views/products/products/_form.html.slim
+++ b/app/views/products/products/_form.html.slim
@@ -1,4 +1,5 @@
 = simple_form_for @product, as: :product, url: @product.persisted? ? product_path(@product) : products_path(@product) do |f|
+  = f.error_notification
   = f.input :title
 
   h3 Varianty produktu
